--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ document.write('  '+todaysDate);
   width: 100%;
   font-size: 16px;
   padding: 12px 20px 12px 40px;
-  border: 1px solid #ddd;
-  margin-bottom: 12px;
+  border: 10px solid #DF0101;
+  margin-bottom: 18px;
 }
 
 #myUL {
@@ -124,9 +124,9 @@ document.write('  '+todaysDate);
 }
 
 #myUL li a {
-  border: 1px solid #ddd;
+  border: 5px solid #40FF00;
   margin-top: -1px; /* Prevent double borders */
-  background-color: #f6f6f6;
+  background-color: #40FF00;
   padding: 12px;
   text-decoration: none;
   font-size: 18px;
@@ -135,7 +135,7 @@ document.write('  '+todaysDate);
 }
 
 #myUL li a:hover:not(.header) {
-  background-color: #eee;
+  background-color: #FF00FF;
 }
 </style>
 </head>
@@ -156,9 +156,9 @@ document.write('  '+todaysDate);
   <li><a href="https://github.com/santos246/0-EXEMPLO-OUTRA-ABAs12164/archive/refs/heads/main.zip">0-EXEMPLO-OUTRA-ABAs12164</a></li>
 <!--------------------------------------------------------->
 <li><a href="
-LINK
+https://github.com/santos246/DOWNLOAD-HTML-ZIP-GITHUB/archive/refs/heads/main.zip
 ">
-NOME
+DOWNLOAD-HTML-ZIP-GITHUB
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
