--- a/index.html
+++ b/index.html
@@ -26,6 +26,41 @@ a.red:visited {
 <body>
 <center>
 <!--------------------------------------------------------->
+<!------------------------------------------------------->
+<html><head>
+<title>😇😈FILMESSANTOS😈😇</title>
+<script LANGUAGE="JavaScript">
+function popup()
+{
+window.open("LEIA ISSO.html", "", "top=140, left=240, width=350, height=500" );
+}
+</SCRIPT>
+</head>
+<body onload=popup();>
+</body>
+</html>
+
+
+<html>
+<head>
+<title>😇😈FILMESSANTOS😈😇</title>
+<script type="text/javascript">
+<!--
+function abrirJanela(pagina, largura, altura) {
+ // Definindo centro da tela
+ var esquerda = (screen.width - largura)/2;
+ var topo = (screen.height - altura)/2;
+ // Abre a nova janela
+ minhaJanela = window.open(pagina,'','height=' + altura + ', width=' + largura + ', top=' + topo + ', left=' + esquerda);
+}
+-->
+</script>
+</head>
+<body>
+
+</body>
+</html>
+<!------------------------------------------------------->
 <!---------------------FAIXA AZUL----------------------->  
 <a href="#" target="_self">
 <div height="100" style="background-color: #40FF00;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4><h2>😇😈FILMESSANTOS😈😇</h2></FONT></p></div></a>
@@ -142,6 +177,9 @@ document.write('  '+todaysDate);
 <body>
 
 <h2>DOWNLOAD HTML SO GITHUB</h2>
+<a href="#" onclick="javascript:abrirJanela('LEIA ISSO.html', 400, 700);">LEIA ISSO</a> 
+
+<a href="#" onclick="javascript:abrirJanela('LEIA ISSO.html', 600, 450);">LEIA ISSO</a>
 
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
 <ul id="myUL">
@@ -212,133 +250,127 @@ FONTE-PORNO-E-ESSE
 <li><a href="
 https://github.com/santos246/santos246IPTV-TUDO-GITHUB-fs2016/archive/refs/heads/main.zip
 ">
-santos246IPTV-TUDO-GITHUB-fs2016
+IPTV-TUDO-GITHUB-fs2016
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/VIRTUALONLINE/archive/refs/heads/main.zip
 ">
-NOME
+VIRTUALONLINE
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/F.-RIBAS-BAR/archive/refs/heads/main.zip
 ">
-NOME
+F.-RIBAS-BAR
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/NOVOMUNDO/archive/refs/heads/main.zip
 ">
-NOME
+NOVOMUNDO
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/000000-FILMESSANTOS-/archive/refs/heads/main.zip
 ">
-NOME
+000000-FILMESSANTOS-
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/ALBUM-EM-GERAL/archive/refs/heads/main.zip
 ">
-NOME
+ALBUM-EM-GERAL
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/DOWNLOAD-MENU/archive/refs/heads/main.zip
 ">
-NOME
+DOWNLOAD-MENU
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/DOWNLOAD-DE-HTML-E-ESSE/archive/refs/heads/main.zip
 ">
-NOME
+DOWNLOAD-DE-HTML-E-ESSE
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/FILMESONLINE/archive/refs/heads/main.zip
 ">
-NOME
+FILMESONLINE
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/FILMESONLINE/archive/refs/heads/main.zip
 ">
-NOME
-</a></li>
-<!--------------------------------------------------------->
-<li><a href="
-https://github.com/santos246/FILMESONLINE/archive/refs/heads/main.zip
-">
-NOME
+FILMESONLINE
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/MENU-E-CATEGORIAS/archive/refs/heads/main.zip
 ">
-NOME
+MENU-E-CATEGORIAS
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/TESTANDO-DOWNLOAD-/archive/refs/heads/main.zip
 ">
-NOME
+TESTANDO-DOWNLOAD-
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/FILMESSANTOS/archive/refs/heads/main.zip
 ">
-NOME
+FILMESSANTOS
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/BUSCA-TUDOMISTURADO/archive/refs/heads/main.zip
 ">
-NOME
+BUSCA-TUDOMISTURADO
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/LINKS-HTML/archive/refs/heads/main.zip
 ">
-NOME
+LINKS-HTML
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/ONLINE/archive/refs/heads/main.zip
 ">
-NOME
+ONLINE
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/MINHAS-MUSICAS-BUSCA/archive/refs/heads/main.zip
 ">
-NOME
+MINHAS-MUSICAS-BUSCA
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/BUSCA-DE-EXEMPLOS-HTML-E-ESSE/archive/refs/heads/main.zip
 ">
-NOME
+BUSCA-DE-EXEMPLOS-HTML-E-ESSE
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/MAURCIO-fs2016/archive/refs/heads/main.zip
 ">
-NOME
+MAURCIO-fs2016
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/PORNOIPTV/archive/refs/heads/main.zip
 ">
-NOME
+PORNOIPTV
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
 https://github.com/santos246/-FILMESSANTOS-/archive/refs/heads/main.zip
 ">
-NOME
+-FILMESSANTOS-
 </a></li>
 <!--------------------------------------------------------->
 <li><a href="
